fix: ability stats